--- a/WebBTL/Views/Home/Index.cshtml
+++ b/WebBTL/Views/Home/Index.cshtml
@@ -34,8 +34,8 @@
                             </li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center gap-3">
-                            <a href="#" class="text-decoration-none text-black">Login</a>
-                            <a href="#" class="text-decoration-none px-3 py-1 rounded-4 text-black" style="background-color:blue;">Sign up</a>
+                            <a href="/Home/Login" class="text-decoration-none text-black">Login</a>
+                            <a href="/Home/Registter" class="text-decoration-none px-3 py-1 rounded-4 text-black" style="background-color:blue;">Sign up</a>
                         </div>
                     </div>
                 </div>
